--- a/style.css
+++ b/style.css
@@ -34,7 +34,13 @@ a {
 #logo {
     width: 100%;
 }
- 
+/*
+main {
+    display: grid;
+    grid-template-columns: 30% 30% 30%;
+    justify-content: space-around;
+}
+ */
 
 .infoButton {
     background-color: #6ccffd;
@@ -49,6 +55,7 @@ a {
     /*border-radius: 8px;*/
 }
 
+.main,
 main {
     padding-top: 5%;
 }
@@ -75,6 +82,28 @@ main {
     color: white;
     border: 2px solid white;
     font-family: Arial, Helvetica, sans-serif;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 2%;
+}
+
+.praise,
+.acknowledge,
+.commit {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-radius: 5%;
+}
+
+
+h1 {
+    color: #ffffff;
+    text-shadow: 2px 2px #6ccffd;
+    text-decoration: underline;
 }
 
 .text {
@@ -84,9 +113,21 @@ main {
 .praise {
     display: flex;
     flex-direction: column;
-    align-items: center;
     /*align-self: center;
     align-content: center;*/
+}
+
+.special {
+    /*border: 2px solid white;*/
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 15%;
+    margin-right: 15%;
+    /*background-color: rgb(0, 0, 0);*/
+}
+
+.special p{
+    color: rgb(250, 247, 247);
 }
 
 @media screen and (max-width:820px) {
@@ -104,10 +145,20 @@ main {
         padding-right:15%;
         padding-top: 8%;
     }
+    .main {
+        display: grid;
+        grid-template-columns: 30% 30% 30%;
+        justify-content: space-around;
+    }
+    .mains {
+        display: grid;
+        grid-template-columns: 45% 45%;
+        justify-content: space-around;
+    }
 }
 
 
-@media screen and (max-width:628px) {
+@media screen and (max-width:693px) {
     /*#logo {
         width: 100%;
     }*/
@@ -122,6 +173,14 @@ main {
     }
     .logo {
         padding-left: 0%;
+    }
+    .main {
+        display: flex;
+        flex-direction: column;
+    }
+    .main {
+        display: flex;
+        flex-direction: column;
     }
     
 }
@@ -141,5 +200,15 @@ main {
     }
     .logo {
         padding-left: 15%;
+    }
+    .main {
+        display: grid;
+        grid-template-columns: 30% 30% 30%;
+        justify-content: space-around;
+    }
+    .mains {
+        display: grid;
+        grid-template-columns: 45% 45% ;
+        justify-content: space-around;
     }
 }  
